# adam

./: .clang-format  .gitignore  ALGORITHM.md  CMakeLists.txt  LICENSE  Makefile  README.md  TESTING.md  adam.cc  adam.h  adam.h.in  cmd.cc  cmd.h  csprng.cc  csprng.h  gen.cc  install.sh  main.cc  util.h
include/: adam.h  adam.h.in  api.h  cli.h  cmd.h  csprng.h  defs.h  ent.h  minapi.h  rng.h  simd.h  support.h  test.h  util.h  worker.h
scripts/: path.sh  size.sh
src/: FILES  adam.c  adam.cc  adam.h  api.c  cli.c  cli.h  cmd.cc  csprng.cc  ent.c  main.c  rng.c  rng.cc  support.c  test.c  util.c  util.h  worker.c
tests/: BigCrush.txt  Crush.txt  Dieharder.txt  NIST-100M.txt  NIST-100MB.txt  NIST-100Mb.txt  NIST-10MB.txt  NIST-10Mb.txt  NIST-1GB.txt  NIST-1Gb.txt  NIST-200Mb.txt  NIST-250Mb.txt  NIST-500MB.txt  NIST-500Mb.txt  PractRand-Standard.txt  Rabbit.txt  SmallCrush.txt  gjrand-100GB.txt  gjrand-100MB.txt  gjrand-100MDBL.txt  gjrand-10BDBL.txt  gjrand-10GB.txt  gjrand-10MB.txt  gjrand-10MDBL.txt  gjrand-1BDBL.txt  gjrand-1GB.txt  gjrand-1MDBL.txt
